[gd_scene load_steps=2 format=3 uid="uid://bp8n5x3g5yixc"]

[ext_resource type="Script" path="res://scenes/game/local_user/LocalUser.gd" id="1_pfx38"]

[node name="LocalUser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pfx38")

[node name="CPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Layout" type="VBoxContainer" parent="CPanel"]
layout_mode = 2

[node name="Messages" type="ScrollContainer" parent="CPanel/Layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="MsgContainer" type="VBoxContainer" parent="CPanel/Layout/Messages"]
unique_name_in_owner = true
layout_mode = 2

[node name="Controls" type="HBoxContainer" parent="CPanel/Layout"]
layout_mode = 2

[node name="NameLineEdit" type="LineEdit" parent="CPanel/Layout/Controls"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
placeholder_text = "Display Name"

[node name="VSeparator" type="VSeparator" parent="CPanel/Layout/Controls"]
layout_mode = 2

[node name="MsgLineEdit" type="LineEdit" parent="CPanel/Layout/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter Message"

[node name="BtnSend" type="Button" parent="CPanel/Layout/Controls"]
layout_mode = 2
text = "Send"

[connection signal="text_changed" from="CPanel/Layout/Controls/NameLineEdit" to="." method="_on_name_line_edit_text_changed"]
[connection signal="text_submitted" from="CPanel/Layout/Controls/NameLineEdit" to="." method="_on_name_line_edit_text_changed"]
[connection signal="text_submitted" from="CPanel/Layout/Controls/MsgLineEdit" to="." method="_on_msg_line_edit_text_submitted"]
[connection signal="pressed" from="CPanel/Layout/Controls/BtnSend" to="." method="_on_btn_send_pressed"]
